# LiMem

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  OPTIMIZATION_REPORT.md  README.md  diagnose_db.py  diagnose_failed_tests.py  docker-compose.yml  kuzu_explorer.txt  main.py  optimization_log.md  package.json  pyproject.toml  test_cases.py
DB/: demo_db.kz.wal  explorer.db
docs/: architecture.md  development.md  http-api.md  presentation_outline.md  weight_calculation.md  算法说明文档.md  超参数配置指南.md
src/limem/: README.md  __init__.py  config.py  data.py  db.py  demo.py  factory.py  ltm.py  ltmemory_impl.py  migration.py  models.py  ops.py  search.py  search_demo.py  trips_debugger.py  utils.py  viz.py  web_api.py
src/prompts/: README.md  (+31 more)
tests/: test_adaptive_extractor.py  test_adaptive_extractor_benchmark_regressions.py  test_context_extractor_batch.py  test_context_extractor_validation.py  test_dashscope_base_url.py  test_dynamic_evolution.py  test_extraction_normalization.py  test_kuzu_store_batch_write.py  test_low_signal_ingest.py  test_memory_builder_performance.py  test_memory_builder_time_anchor.py  test_multi_event_ingest.py  test_preextracted_contexts.py  test_registered_entity_e2e.py  test_relation_pipeline.py  test_session_batch_regressions.py  test_session_loader.py  test_task_recall.py  test_trips_debug_workflow.py  test_trips_debugger_session.py  test_trips_loader_text.py  test_two_stage_event_extractor.py  test_unified_extractor.py
web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+145 files in other folders)
